src/validation/tests/snapshots/rusty__validation__tests__statement_validation_tests__function_block_implicit_pointer_downcast.snap
---
source: src/validation/tests/statement_validation_tests.rs
expression: "&diagnostics"
---
note: Incompatible poiner types: passing by-ref argument of type LINT to parameter expecting INT
   ┌─ <internal>:11:17
   │
11 │                 var1_lint, // downcast
   │                 ^^^^^^^^^ Incompatible poiner types: passing by-ref argument of type LINT to parameter expecting INT

note: Incompatible poiner types: passing by-ref argument of type LWORD to parameter expecting DWORD
   ┌─ <internal>:12:17
   │
12 │                 var_lword, // downcast
   │                 ^^^^^^^^^ Incompatible poiner types: passing by-ref argument of type LWORD to parameter expecting DWORD

note: Incompatible poiner types: passing by-ref argument of type LINT to parameter expecting INT
   ┌─ <internal>:15:17
   │
15 │                 var2_lint, // downcast
   │                 ^^^^^^^^^ Incompatible poiner types: passing by-ref argument of type LINT to parameter expecting INT

error: Invalid assignment: cannot assign 'WSTRING' to 'STRING'
   ┌─ <internal>:16:17
   │
16 │                 var_wstr, // invalid
   │                 ^^^^^^^^ Invalid assignment: cannot assign 'WSTRING' to 'STRING'


